crates/strider-analyze/tests/snapshots/aarch64__builtins__main.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x7e0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "4" [label="const 0xdeadbeef:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "8" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "9" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "10" -> "8" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "10" [label="const 0x7f4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "11" -> "8" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "11" [label="const 0x10000:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "12" -> "8" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "13" -> "8" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "14" -> "8" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "15" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "8" -> "15" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "16" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "17" -> "15" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "17" [label="const 0x800:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "18" -> "15" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0x10000:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "19" -> "15" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "20" -> "15" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "21" -> "15" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "22" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "15" -> "22" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "23" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "24" -> "22" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0x810:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "25" -> "22" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "25" [label="const 0xdeadbeefcafebabe:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "26" -> "22" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "27" -> "22" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "28" -> "22" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "29" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "22" -> "29" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "30" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "31" -> "29" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "31" [label="const 0x824:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "32" -> "29" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "32" [label="const 0x10000:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "33" -> "29" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "34" -> "29" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "35" -> "29" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "36" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "29" -> "36" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "37" -> "36" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "38" -> "36" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "38" [label="const 0x830:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "39" -> "36" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "39" [label="const 0x32:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "40" -> "36" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "41" -> "36" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "42" -> "36" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "43" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "36" -> "43" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "44" -> "43" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "45" -> "43" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "46" -> "43" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "v47" [label="Post Call\nq0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "36" -> "v47" [color="#888888", style=dashed];
  "v47" -> "43" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "v48" [label="Post Call\nq1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "36" -> "v48" [color="#888888", style=dashed];
  "v48" -> "43" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "46" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "49" -> "46" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "49" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "50" -> "49" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "51" -> "49" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "51" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v52" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "36" -> "v52" [color="#888888", style=dashed];
  "v52" -> "51" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "50" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "36" -> "50" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "53" -> "50" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "53" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "54" -> "53" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "55" -> "53" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "55" [label="const 0xfffffffffffffffc:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "54" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "45" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "49" -> "45" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "44" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "36" -> "44" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v56" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v56" -> "44" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "49" -> "44" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "42" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "57" -> "42" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "58" -> "42" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "58" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v59" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "29" -> "v59" [color="#888888", style=dashed];
  "v59" -> "58" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "57" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "29" -> "57" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "53" -> "57" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "41" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "58" -> "41" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "40" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "42" -> "40" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "37" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "29" -> "37" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v60" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v60" -> "37" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "42" -> "37" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "35" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "61" -> "35" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "62" -> "35" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "62" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v63" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "22" -> "v63" [color="#888888", style=dashed];
  "v63" -> "62" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "61" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "22" -> "61" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "53" -> "61" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "34" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "62" -> "34" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "33" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "35" -> "33" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "30" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "22" -> "30" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v64" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v64" -> "30" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "35" -> "30" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "28" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "65" -> "28" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "66" -> "28" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "66" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v67" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "15" -> "v67" [color="#888888", style=dashed];
  "v67" -> "66" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "65" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "15" -> "65" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "53" -> "65" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "27" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "66" -> "27" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "26" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "28" -> "26" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "23" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "15" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v68" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v68" -> "23" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "28" -> "23" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "21" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "69" -> "21" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "70" -> "21" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "70" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v71" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "8" -> "v71" [color="#888888", style=dashed];
  "v71" -> "70" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "69" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "8" -> "69" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "53" -> "69" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "20" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "70" -> "20" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "19" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "21" -> "19" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "16" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "8" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v72" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v72" -> "16" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "21" -> "16" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "14" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "73" -> "14" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "74" -> "14" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "74" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v75" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v75" [color="#888888", style=dashed];
  "v75" -> "74" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "73" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "73" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "53" -> "73" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "13" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "74" -> "13" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "12" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "14" -> "12" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "9" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "1" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v76" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v76" -> "9" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "14" -> "9" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "6" [label="arg[2] ← x2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="arg[1] ← x1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "77" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v78" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v78" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "79" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "79" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "77" [label="StackStore u64\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "80" -> "77" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v81" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v81" -> "77" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "82" -> "77" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "82" [label="init\nx30", shape=Mdiamond, fillcolor="#1a3a5c"];
  "80" [label="StackStore u64\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "83" -> "80" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v84" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v84" -> "80" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "85" -> "80" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "85" [label="init\nx29", shape=Mdiamond, fillcolor="#1a3a5c"];
  "83" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
